Fixed 'back-top' link visability on small devices

--- a/content/static/css/flexi.css
+++ b/content/static/css/flexi.css
@@ -135,7 +135,7 @@ table.full-table {
 	float: right;
 	padding: 3px 12px;
 	margin-top: 8px;
-	margin-right: 15px;
+	/* margin-right: 15px; */
 	border: 1px solid #333;
 	border-radius: 4px;
 	line-height: inherit;
